--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 <meta http-equiv="refresh" content="5">
-<title>Processing home</title> 
+<title>Home</title> 
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
 
@@ -17,19 +17,19 @@
 
 <ul>	
 <div class="dropdown">
-<li class="dropbtn"><a href =''> Projects</a>
+<li class="dropbtn"><a href =''>Javascript Processing</a>
   <div class="dropdown-content">
-    <a href="8-ball.html">8-ball</a>
-    <a href="chess.html">chess (needs help) </a>
-    <a href="pong.html">pong (needs help)</a>
-    <a href="barnsley-fern.html">barnsley fern</a>
-	<a href="ad-design.html">ad-design</a>
-	<a href="fish-tank.html">fish-tank</a>
-	<a href="circle.html">circle</a>
+        <a href="8-ball.html">8-ball</a>
+        <a href="barnsley-fern.html">Barnsley Fern</a>
+	<a href="ad-design.html">Ad-Design</a>
+	<a href="fish-tank.html">Fish Tank</a>
+	<a href="circle.html">Circle</a>
 	<a href="bouncing-ball.html">bouncing ball</a>
-	<a href="basic-example.html">basic example</a>
+	<a href="basic-example.html">Circle 2</a>
 	<a href="lib.html">Libertarian Countries (not done)</a>
-	<a href="quiz.html">political compass</a>
+	<a href="quiz.html">political compass (not done)</a>
+	<a href="chess.html">chess (needs help) </a>
+        <a href="pong.html">pong (needs help)</a>
   </div>
 </div> </li>
 </ul>  
