--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<meta http-equiv="refresh" content="5">
+<!-- meta http-equiv="refresh" content="5"-->
 <title>Home</title> 
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
