--- a/bouncing-ball.html
+++ b/bouncing-ball.html
@@ -19,7 +19,7 @@
 <h1><a href = 'index.html'>Home</a></h1> 
 
 
-<canvas data-processing-sources="PDE/bouncing-ball.pde"></canvas>
+<canvas data-processing-sources="PDE/Bouncing-Ball.pde"></canvas>
 </center> 
 </body> 
 
