--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
         <a href="pong.html">pong (needs help)</a>
   </div>
 </div> </li>
+	
+
+	
+<li class="dropbtn"><a href =''>Bots</a>
+  <div class="dropdown-content">
+        <a href="">Wesley's Discord Bot</a>
+        <a href="">Wesley's Twitter Bot</a>
+  </div>
+</div> </li>
+
+
+<li class="dropbtn"><a href =''>About Me</a> </li>
+
 </ul>  
 
 
