--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 	<a href="circle.html">Circle</a>
 	<a href="bouncing-ball.html">bouncing ball</a>
 	<a href="basic-example.html">Circle 2</a>
-	<a href="lib.html">Libertarian Countries (not done)</a>
+<!--	<a href="lib.html">Libertarian Countries (not done)</a>
 	<a href="quiz.html">political compass (not done)</a>
 	<a href="chess.html">chess (needs help) </a>
         <a href="pong.html">pong (needs help)</a>
+-->
   </div>
 </div> </li>
 	
