--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div> </li>
 	
 
-	
+<div class="dropdown">	
 <li class="dropbtn"><a href =''>Bots</a>
   <div class="dropdown-content">
         <a href="">Wesley's Discord Bot</a>
