--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<a href="ad-design.html">Ad-Design</a>
 	<a href="fish-tank.html">Fish Tank</a>
 	<a href="circle.html">Circle</a>
-	<a href="bouncing-ball.html">bouncing ball</a>
+	<a href="bouncing-ball.html">Bouncing Ball</a>
 	<a href="basic-example.html">Circle 2</a>
 <!--	<a href="lib.html">Libertarian Countries (not done)</a>
 	<a href="quiz.html">political compass (not done)</a>
