--- a/basic-example.html
+++ b/basic-example.html
@@ -20,6 +20,10 @@
 
 
 <canvas data-processing-sources="PDE/basic-example.pde"></canvas>
+  
+  <h1>Directions</h1> 
+  <p>If on desktop, move the mouse over the canvas.</p> 
+  <p>If on mobile, touch the canvas.</p>
 </center> 
 </body> 
 
