--- a/basic-example.html
+++ b/basic-example.html
@@ -23,7 +23,7 @@
   
   <h1>Directions</h1> 
   <p>If on desktop, move the mouse over the canvas.</p> 
-  <p>If on mobile, touch the canvas.</p>
+  <p>If on mobile, touch on the canvas and drag.</p>
 </center> 
 </body> 
 
