--- a/8-ball.html
+++ b/8-ball.html
@@ -55,6 +55,10 @@
 
 
 <canvas data-processing-sources="PDE/8-ball.pde"></canvas>
+  
+  <h1>Directions</h1> 
+  <p>Ask the 8 ball a question, then click the "spin" button.</p> 
+	
 </center> 
 </body> 
 
