--- a/circle.html
+++ b/circle.html
@@ -54,6 +54,10 @@
 
 
 <canvas data-processing-sources="PDE/circle.pde"></canvas>
+	
+  <h1>Directions</h1> 
+  <p>Click and drag the circle.</p> 
+  <p>The colors change if you refresh the page. <a href ='https://wesleygarretson.github.io/circle.html'>Click here to refresh.</a></p>
 </center> 
 </body> 
 
