--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+	
+<link rel="shortcut icon" href="Pictures/icon.ico">
+<link rel='stylesheet' type='text/css' href='style.css'>
 
 <!-- meta http-equiv="refresh" content="5"-->
 	
