--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
-<link rel="import" href="nav.html">
+<link rel="import" href="https://wesleygarretson.github.io/nav.html">
 <!-- meta http-equiv="refresh" content="5"-->
 	
 </head> 
