--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
-<link rel="import" href="https://wesleygarretson.github.io/nav.html">
-<!-- meta http-equiv="refresh" content="5"-->
+<script src="csi.min.js"></script> 
+<!-- meta http-equiv="cis.min.jsrefresh" content="5"-->
 	
 </head> 
 <body>
-
+<div data-include="nav.html"></div>
 
 
 
