--- a/circle.html
+++ b/circle.html
@@ -16,7 +16,7 @@
 
 <body>
   
-<link rel="import" href="nav.html">
+<iframe src="nav.html" seamless></iframe>
   
 <center> 
 <h1><a href = 'index.html'>Home</a></h1> 
