--- a/ad-design.html
+++ b/ad-design.html
@@ -23,7 +23,7 @@
 <h1><a href = 'index.html'>Home</a></h1> 
 
 
-<canvas data-processing-sources="PDE/ad-design.pde"></canvas>
+<canvas data-processing-sources="PDE/Ad-Design.pde"></canvas>
 </center> 
 </body> 
 
