--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,7 @@
+<html>
 <head><link rel='stylesheet' type='text/css' href='style.css'></head> 
 
+	<body>
 <ul>	
 <div class="dropdown">
 <li class="dropbtn"><a href =''>Javascript Processing</a>
@@ -30,5 +32,6 @@
 
 
 <li class="dropbtn"><a href =''>About Me</a> </li>
-
-</ul> 
+	
+</ul> </body> 
+</html>
