--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
-<html>
-<head><link rel='stylesheet' type='text/css' href='style.css'></head> 
+
+<link rel='stylesheet' type='text/css' href='style.css'>
 
 <ul>	
 <div class="dropdown">
@@ -33,4 +33,4 @@
 <li class="dropbtn"><a href =''>About Me</a> </li>
 	
 </ul>
-</html>
+
