--- a/8-ball.html
+++ b/8-ball.html
@@ -16,8 +16,7 @@
 
 <body>
   
-<iframe src="nav.html" seamless></iframe>
-  
+<div data-include="nav.html"></div>
   
 <center> 
 <h1><a href = 'index.html'>Home</a></h1> 
