--- a/8-ball.html
+++ b/8-ball.html
@@ -8,6 +8,8 @@
 <title>Magic 8-ball</title> 
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
+	
+<script src="csi.min.js"></script> 
 <script type="text/javascript" src="processing.js"></script>
 
 <style>
