--- a/ad-design.html
+++ b/ad-design.html
@@ -9,6 +9,7 @@
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
 <script type="text/javascript" src="processing.js"></script>
+  <script src="csi.min.js"></script> 
 
 <style>
 </style> 
@@ -16,7 +17,7 @@
 
 <body>
   
-<iframe src="nav.html" seamless></iframe>
+<div data-include="nav.html"></div>
   
   
 <center> 
