--- a/bouncing-ball.html
+++ b/bouncing-ball.html
@@ -9,14 +9,14 @@
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
 <script type="text/javascript" src="processing.js"></script>
+  <script src="csi.min.js"></script> 
 
 <style>
 </style> 
 </head> 
 
 <body>
-  
-<iframe src="nav.html" seamless></iframe> 
+  <div data-include="nav.html"></div>
   
 <center> 
 <h1><a href = 'index.html'>Home</a></h1> 
