--- a/fish-tank.html
+++ b/fish-tank.html
@@ -9,45 +9,15 @@
 <link rel="shortcut icon" href="Pictures/icon.ico">
 <link rel='stylesheet' type='text/css' href='style.css'>
 <script type="text/javascript" src="processing.js"></script>
+	<script src="csi.min.js"></script> 
 
 <style>
 </style> 
 </head> 
 
 <body>
+  <div data-include="nav.html"></div>
   
-  <ul>	
-<div class="dropdown">
-<li class="dropbtn"><a href =''>Javascript Processing</a>
-  <div class="dropdown-content">
-        <a href="8-ball.html">8-ball</a>
-        <a href="barnsley-fern.html">Barnsley Fern</a>
-	<a href="ad-design.html">Ad-Design</a>
-	<a href="fish-tank.html">Fish Tank</a>
-	<a href="circle.html">Circle</a>
-	<a href="bouncing-ball.html">Bouncing Ball</a>
-	<a href="basic-example.html">Circle 2</a>
-<!--	<a href="lib.html">Libertarian Countries (not done)</a>
-	<a href="quiz.html">political compass (not done)</a>
-	<a href="chess.html">chess (needs help) </a>
-        <a href="pong.html">pong (needs help)</a>
--->
-  </div>
-</div> </li>
-	
-
-<div class="dropdown">	
-<li class="dropbtn"><a href =''>Bots</a>
-  <div class="dropdown-content">
-        <a href="">Wesley's Discord Bot</a>
-        <a href="">Wesley's Twitter Bot</a>
-  </div>
-</div> </li>
-
-
-<li class="dropbtn"><a href =''>About Me</a> </li>
-
-</ul> 
   
 <center> 
 <h1><a href = 'index.html'>Home</a></h1> 
