--- a/nav.html
+++ b/nav.html
@@ -29,6 +29,13 @@
   </div>
 </div> </li>
 
+<div class="dropdown">	
+<li class="dropbtn"><a href =''>Websites</a>
+  <div class="dropdown-content">
+        <a href="Kill-counter.html">Animal kill counter</a>
+  </div>
+</div> </li>
+
 
 <li class="dropbtn"><a href =''>About Me</a> </li>
 	
