--- a/rain.html
+++ b/rain.html
@@ -24,7 +24,7 @@
 
 <h1>Directions</h1> 
   <p>Click and hold to add more rain drops.</p> 
-  <p><a href ='https://wesleygarretson.github.io/circle.html'>Click here to restart.</a></p>
+  <p><a href ='https://wesleygarretson.github.io/rain.html'>Click here to restart.</a></p>
 
 <canvas data-processing-sources="PDE/rain.pde"></canvas>
 </center> 
