--- a/nav.html
+++ b/nav.html
@@ -12,6 +12,7 @@
 	<a href="bouncing-ball.html">Bouncing Ball</a>
 	<a href="basic-example.html">Circle 2</a>
 	<a href="rain.html">Rain</a>
+	<a href="tree.html">Tree Fractal</a>
 <!--	<a href="lib.html">Libertarian Countries (not done)</a>
 	<a href="quiz.html">political compass (not done)</a>
 	<a href="chess.html">chess (needs help) </a>
