--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
 
 <h1>Home</h1>
+	
+	<div id='directions'> 
+	<p>NAVIGATION DIRECTIONS</p> 
+	<p><b>Computer:</b> hover the navigation bar to navigate.</p> 
+	<p><b>Mobile:</b> Press and hold a tab until the tab opens.</p> 
+	</div> 
+	
+	<p>This website is a collection of my programming projects.</p> 
 
 
 </body> 
