--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <h1>Home</h1>
 	
 	<div id='directions'> 
+		<aside>
 	<p>NAVIGATION DIRECTIONS</p> 
 	<p><b>Computer:</b> hover the navigation bar to navigate.</p> 
 	<p><b>Mobile:</b> Press and hold a tab until the tab opens.</p> 
+		</aside> 
 	</div> 
 	
 	<p>This website is a collection of my programming projects.</p> 
