--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 
 <h1>Home</h1>
 	
-	<div id='directions'> 
-		<aside>
+	<aside>
+	<div id="directions"> 
+		
 	<p>NAVIGATION DIRECTIONS</p> 
 	<p><b>Computer:</b> hover the navigation bar to navigate.</p> 
 	<p><b>Mobile:</b> Press and hold a tab until the tab opens.</p> 
-		</aside> 
 	</div> 
+	</aside> 
 	
+	<center> 
+	<div id="main-article">
 	<p>This website is a collection of my programming projects.</p> 
-
+	</div> 
+	</center> 
 
 </body> 
 </html> 
