--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 	<center> 
 	<div id="main-article">
 	<p>This website is a collection of my programming projects.</p> 
+		<p>Use the navigation bar to view the progams I've made.
+		<br>
+		Under the "Javascript processing" tab is where you can find interactive sketches which I coded with jacascript processing. 
+		<br>
+		Under the "Bots" tab is where you can find a discord bot which I programmed for a radio show. This bot is programmed to host livestreaming music. 
+		<br>
+		The "websites" tab is a collection of websites I've made. 
+		<br> 
+		Thank you for visting my website! You can contact me at wesleyjgarretson@protonmail.com </p>
 	</div> 
 	</center> 
 
