--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,8 @@
   <div class="dropdown-content">
         <a href="8-ball.html">8-ball</a>
         <a href="barnsley-fern.html">Barnsley Fern</a>
-	<a href="ad-design.html">Ad-Design</a>
+<!--    <a href="ad-design.html">Ad-Design</a>
+-->
 	<a href="fish-tank.html">Fish Tank</a>
 	<a href="circle.html">Circle</a>
 	<a href="bouncing-ball.html">Bouncing Ball</a>
@@ -25,8 +26,7 @@
 <div class="dropdown">	
 <li class="dropbtn"><a href =''>Bots</a>
   <div class="dropdown-content">
-        <a href="">Wesley's Discord Bot</a>
-        <a href="">Wesley's Twitter Bot</a>
+        <a href="https://discordapp.com/oauth2/authorize?client_id=515085979443396618&scope=bot&permissions=8">Wesley's Discord Bot</a>
   </div>
 </div> </li>
 
@@ -38,7 +38,7 @@
 </div> </li>
 
 
-<li class="dropbtn"><a href =''>About Me</a> </li>
-	
+<!-- <li class="dropbtn"><a href =''>About Me</a> </li>
+-->	
 </ul>
 
