--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
 	
 	<center> 
 	<div id="main-article">
-	<p>This website is a collection of my programming projects.</p> 
-		<p>Use the navigation bar to view the progams I've made.
-		<br>
-		Under the "Javascript processing" tab is where you can find interactive sketches which I coded with jacascript processing. 
-		<br>
-		Under the "Bots" tab is where you can find a discord bot which I programmed for a radio show. This bot is programmed to host livestreaming music. 
-		<br>
-		The "websites" tab is a collection of websites I've made. 
-		<br> 
+	<p>Hello! My name is Wesley. I'm a 20 year old programmer. I am currently studying in college for a CIS degree at Penn Foster.</p> 
+		
+		<p> I built this site with html, css, and javascript. If you are interested in viewing my other projects, you can use the navigation bar to see the interactive sketches I've made with Javascript Processing, 
+			the other websites i've made, and the discord bot I am hosting for an influential radio show.</p> 
+		<p>
 		Thank you for visting my website! You can contact me at wesleyjgarretson@protonmail.com </p>
 	</div> 
 	</center> 
