--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	
 	<center> 
 	<div id="main-article">
-	<p>Hello! My name is Wesley. I'm a 20-year-old programmer. I am currently studying in college for a CIS degree at Penn Foster.</p> 
+	<p>Hello! I'm a 20-year-old programmer. I am currently studying in college for a CIS degree at Penn Foster.</p> 
 		
 		<p> I built this site with HTML, CSS, and Javascript. If you are interested in viewing my other projects, you can use the navigation bar to see my interactive sketches, other websites, or the discord bot I am hosting for an influential radio show.</p> 
 		<p>
-		Thank you for visiting my website! You can contact me at wesleyjgarretson@protonmail.com </p>
+		Thank you for visiting my website!</p>
 	</div> 
 	</center> 
 
